# gh-audit

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  gh-audit.spec  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: bump-version.yml  ci.yml  copilot-review.yml  publish-chocolatey-existing.yml  release.yml  security.yml
chocolatey/: gh-audit.nuspec
chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
examples/: gh-audit.yml
scripts/: build-gh-audit.py  create_posthog_dashboards.py
src/gh_audit/: __init__.py  branding.py  exceptions.py
src/gh_audit/adapters/: __init__.py  base.py  github_graphql.py  github_rest.py
src/gh_audit/auth/: __init__.py  github_app.py
src/gh_audit/cli/: __init__.py  app.py  credential_resolver.py  output.py  output_paths.py
src/gh_audit/models/: __init__.py  actions.py  adoption.py  config.py  enterprise.py  finding.py  governance.py  inventory.py  multi_org.py  operations.py  packages.py  projects.py  repository.py  security.py  security_detail.py  user.py
src/gh_audit/rules/: adoption.py  enterprise.py  governance.py  operations.py  registry.py  security.py
src/gh_audit/services/: __init__.py  assessment.py  discovery.py  excel_export.py  multi_org.py  reporting.py  summary_report.py  telemetry.py  workflow_parser.py
src/gh_audit/templates/: __init__.py  assessment_report.html.j2  discovery_report.html.j2  summary_report.html.j2
tests/: conftest.py
tests/integration/: test_discover_workflow.py
tests/unit/: test_adoption_discovery.py  test_adoption_reports.py  test_adoption_rest.py  test_assessment_service.py  test_branding.py  test_branding_integration.py  test_category_framework.py  test_cli_app.py  test_cli_assess.py  test_cli_categories.py  test_cli_multi_org.py  test_cli_rename_smoke.py  test_cli_telemetry.py  test_credential_resolver.py  test_discovery.py  test_discovery_warning_telemetry.py  test_enterprise_discovery.py  test_enterprise_graphql.py  test_enterprise_reports.py  test_excel_export.py  test_exceptions.py  test_finding_models.py  test_github_app_auth.py  test_github_graphql.py  test_github_rest.py  test_governance_discovery.py  test_governance_reports.py  test_governance_rest.py  test_models_adoption.py  test_models_config.py  test_models_enterprise.py  test_models_governance.py  test_models_inventory.py  test_models_multi_org.py  test_models_operations.py  test_models_repository.py  test_models_security.py  test_models_security_detail.py  test_operations_discovery.py  test_operations_reports.py  (+19 more)
